<resources>
    <string name="app_name">FlipAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>


    <string name="title_coins">Coins</string>
    <string name="title_coin_watcher">Coin Watcher</string>
    <string name="title_events">Events</string>
    <string name="title_activity_coin_details">Coin Details</string>
    <string name="description">Description</string>
    <string name="detail_desc">Loading...</string>
    <string name="detail_location">loading locatoins...</string>


    <string name="something_went_wrong">Oops, something went wrong!</string>
    <string name="error_load_data">Error while loading data!</string>
    <string name="empty_list">No data!</string>
    <string name="market_cap_rank">Market Cap Rank</string>
    <string name="coingecko_rank">Coingecko Rank</string>
    <string name="coingecko_score">Coingecko Score</string>
    <string name="developer_score">Developer Score</string>
    <string name="community_score">Community Score</string>
    <string name="liquidity_score">Liquidity Score</string>
    <string name="public_interest_score">Public Interest Score</string>
    <string name="last_updated">Last Updated</string>
    <string name="tv_coin_symbol">Symbol</string>
    <string name="tv_coin_name">Name</string>
    <string name="tv_coin_price_usd">USD Price</string>
    <string name="tv_coin_price_inr">INR Price</string>
    <string name="coin_name">Coin Name</string>
    <string name="coin_symbol">Coin Symbol</string>

</resources>
