<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/rv_itm_sep"
            android:paddingTop="@dimen/rv_itm_sep"
            android:paddingBottom="@dimen/rv_itm_sep">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/tv_coin_symbol"
                android:textSize="@dimen/rv_itm_tv_hdr_size"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                android:layout_marginTop="@dimen/rv_itm_sep"/>

            <TextView
                android:id="@+id/tv_coin_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                tools:text="@string/detail_desc" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/rv_itm_sep"
            android:paddingTop="@dimen/rv_itm_sep"
            android:paddingBottom="@dimen/rv_itm_sep">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/tv_coin_name"
                android:textSize="@dimen/rv_itm_tv_hdr_size"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                android:layout_marginTop="@dimen/rv_itm_sep"/>

            <TextView
                android:id="@+id/tv_coin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                tools:text="@string/detail_desc" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/rv_itm_sep"
            android:paddingTop="@dimen/rv_itm_sep"
            android:paddingBottom="@dimen/rv_itm_sep">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/tv_coin_price_usd"
                android:textSize="@dimen/rv_itm_tv_hdr_size"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                android:layout_marginTop="@dimen/rv_itm_sep"/>

            <TextView
                android:id="@+id/tv_coin_price_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                tools:text="@string/detail_desc" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/rv_itm_sep"
            android:paddingTop="@dimen/rv_itm_sep"
            android:paddingBottom="@dimen/rv_itm_sep">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:text="@string/tv_coin_price_inr"
                android:textSize="@dimen/rv_itm_tv_hdr_size"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                android:layout_marginTop="@dimen/rv_itm_sep"/>

            <TextView
                android:id="@+id/tv_coin_price_inr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rv_itm_sep"
                tools:text="@string/detail_desc" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>