<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/coin_name"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/coin_name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/coin_symbol"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/coin_symbol"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/market_cap_rank"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/market_cap_rank"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/coingecko_rank"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/coingecko_rank"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/coingecko_score"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/coingecko_score"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/developer_score"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/developer_score"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/community_score"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/community_score"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/liquidity_score"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/liquidity_score"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/public_interest_score"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/public_interest_score"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingLeft="@dimen/article_keylines"
                  android:paddingRight="@dimen/md_keylines"
                  android:paddingTop="@dimen/md_keylines"
                  android:paddingBottom="@dimen/md_keylines">

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAccent"
                      android:text="@string/last_updated"
                      android:textSize="@dimen/coin_detail_txt_size"
                      android:layout_marginBottom="@dimen/md_keylines"
                      android:layout_marginTop="@dimen/md_keylines"/>

                  <TextView
                      android:id="@+id/last_updated"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="@dimen/md_keylines"
                      tools:text="@string/detail_desc" />


              </LinearLayout>


              <View
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="@color/colorPrimary"/>

          </LinearLayout>
       </ScrollView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>